// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Representation address details page GET /applications-service/case/1/relevant-representations/address-details should render the page and have the enter fields 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <p class=\\"govuk-body\\"><strong>Project name:</strong> mock title</p><span class=\\"govuk-caption-l\\">Add a representation</span>
    <h1     class=\\"govuk-heading-l\\">Address details</h1>
        <form method=\\"post\\" novalidate>
            <input type=\\"hidden\\" name='stage' value=\\"enter\\">
            <input type=\\"hidden\\" name='setPostcode' value=\\"\\">
            <fieldset class=\\"govuk-fieldset govuk-!-width-two-thirds\\">
                <legend class=\\"govuk-fieldset__legend govuk-visually-hidden\\">What is your address?</legend>
                <div class=\\"govuk-form-group\\">
                    <label class=\\"govuk-label govuk-!-font-weight-bold\\" for=\\"addressLine1\\">Address line 1</label>
                    <input class=\\"govuk-input\\" id=\\"addressLine1\\" name=\\"addressLine1\\"
                    type=\\"text\\" value=\\"96 The Avenue\\" autocomplete=\\"address-line1\\">
                </div>
                <div class=\\"govuk-form-group\\">
                    <label class=\\"govuk-label govuk-!-font-weight-bold\\" for=\\"addressLine2\\">Address line 2 (optional)</label>
                    <input class=\\"govuk-input\\" id=\\"addressLine2\\"
                    name=\\"addressLine2\\" type=\\"text\\" value=\\"Maidstone\\" autocomplete=\\"address-line2\\">
                </div>
                <div class=\\"govuk-form-group\\">
                    <label class=\\"govuk-label govuk-!-font-weight-bold\\" for=\\"town\\">Town or city (optional)</label>
                    <input class=\\"govuk-input govuk-!-width-two-thirds\\"
                    id=\\"town\\" name=\\"town\\" type=\\"text\\" autocomplete=\\"address-level2\\">
                </div>
                <div class=\\"govuk-form-group\\">
                    <label class=\\"govuk-label govuk-!-font-weight-bold\\" for=\\"postcode\\">Postcode</label>
                    <input class=\\"govuk-input govuk-input--width-10\\" id=\\"postcode\\"
                    name=\\"postcode\\" type=\\"text\\" value=\\"MD21 5XY\\" autocomplete=\\"postal-code\\">
                </div>
                <div class=\\"govuk-form-group\\">
                    <label class=\\"govuk-label govuk-!-font-weight-bold\\" for=\\"country\\">Country</label>
                    <input class=\\"govuk-input govuk-!-width-two-thirds\\" id=\\"country\\"
                    name=\\"country\\" type=\\"text\\">
                </div>
            </fieldset>
            <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
        </form>
</main>"
`;

exports[`Representation address details page GET /applications-service/case/1/relevant-representations/address-details should render the page and have the find fields 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <p class=\\"govuk-body\\"><strong>Project name:</strong> mock title</p><span class=\\"govuk-caption-l\\">Add a representation</span>
    <h1     class=\\"govuk-heading-l\\">Address details</h1>
        <form method=\\"post\\" novalidate>
            <input type=\\"hidden\\" name='stage' value=\\"find\\">
            <input type=\\"hidden\\" name='setPostcode' value=\\"\\">
            <div class=\\"govuk-!-width-one-half govuk-!-margin-bottom-4\\">
                <p class=\\"govuk-label govuk-!-margin-top-0\\">Postcode</p>
                <div class=\\"govuk-grid-row\\">
                    <div class=\\"govuk-grid-column-one-half\\">
                        <p class=\\"govuk-body\\"><strong></strong>
                        </p>
                    </div>
                    <div class=\\"govuk-grid-column-one-half\\"><a class=\\"govuk-link govuk-body govuk-!-display-inline-block\\" href=\\"?repId=1&amp;repType=represented&amp;stage=lookup\\"> Change</a>
                    </div>
                </div>
            </div>
            <fieldset class=\\"govuk-fieldset govuk-!-width-two-thirds\\">
                <legend class=\\"govuk-fieldset__legend govuk-visually-hidden\\">Select your address</legend>
                <div class=\\"govuk-form-group\\">
                    <label class=\\"govuk-label\\" for=\\"address\\">Address</label>
                    <select class=\\"govuk-select\\" id=\\"address\\" name=\\"address\\">
                        <option value=\\"\\" selected disabled hidden=\\"true\\">0 addresses found</option>
                    </select>
                </div>
            </fieldset>
            <div class=\\"govuk-!-margin-bottom-6\\"><a class='govuk-link govuk-body govuk-!-display-inline-block govuk-!-margin-0'
                href=\\"?repId=1&amp;repType=represented&amp;stage=enter\\"> I can't find address on the list</a>
            </div>
            <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
        </form>
</main>"
`;

exports[`Representation address details page GET /applications-service/case/1/relevant-representations/address-details should render the page and have the lookup fields 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <p class=\\"govuk-body\\"><strong>Project name:</strong> mock title</p><span class=\\"govuk-caption-l\\">Add a representation</span>
    <h1     class=\\"govuk-heading-l\\">Address details</h1>
        <form method=\\"post\\" novalidate>
            <input type=\\"hidden\\" name='stage' value=\\"lookup\\">
            <input type=\\"hidden\\" name='setPostcode' value=\\"\\">
            <fieldset class=\\"govuk-fieldset\\">
                <legend class=\\"govuk-fieldset__legend govuk-visually-hidden\\">Enter your postcode</legend>
                <div class=\\"govuk-form-group\\">
                    <label class=\\"govuk-label\\" for=\\"lookupPostcode\\">Postcode</label>
                    <input class=\\"govuk-input govuk-!-width-one-third\\" id=\\"lookupPostcode\\"
                    name=\\"lookupPostcode\\" type=\\"text\\">
                </div>
            </fieldset>
            <div class=\\"govuk-!-margin-bottom-6\\"><a class='govuk-link govuk-body govuk-!-display-inline-block govuk-!-margin-0'
                href=\\"?repId=1&amp;repType=represented&amp;stage=enter\\"> Don't have a UK postcode?</a>
            </div>
            <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Find address</button>
        </form>
</main>"
`;

exports[`Representation address details page POST /applications-service/case/1/relevant-representations/address-details Field validation: should show the enter page validation errors 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" data-module=\\"govuk-error-summary\\">
                <div role=\\"alert\\">
                    <h2 class=\\"govuk-error-summary__title\\"> There is a problem</h2>
                    <div class=\\"govuk-error-summary__body\\">
                        <ul class=\\"govuk-list govuk-error-summary__list\\">
                            <li><a href=\\"#addressLine1\\">Enter address line 1</a>
                            </li>
                            <li><a href=\\"#postcode\\">Enter a postcode</a>
                            </li>
                            <li><a href=\\"#country\\">Enter a country</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <p class=\\"govuk-body\\"><strong>Project name:</strong> mock title</p><span class=\\"govuk-caption-l\\">Add a representation</span>
    <h1     class=\\"govuk-heading-l\\">Address details</h1>
        <form method=\\"post\\" novalidate>
            <input type=\\"hidden\\" name='stage' value=\\"enter\\">
            <input type=\\"hidden\\" name='setPostcode' value=\\"\\">
            <fieldset class=\\"govuk-fieldset govuk-!-width-two-thirds\\">
                <legend class=\\"govuk-fieldset__legend govuk-visually-hidden\\">What is your address?</legend>
                <div class=\\"govuk-form-group govuk-form-group--error\\">
                    <label class=\\"govuk-label govuk-!-font-weight-bold\\" for=\\"addressLine1\\">Address line 1</label>
                    <p id=\\"addressLine1-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter address line 1</p>
                    <input                     class=\\"govuk-input govuk-input--error\\" id=\\"addressLine1\\" name=\\"addressLine1\\"
                    type=\\"text\\" aria-describedby=\\"addressLine1-error\\" autocomplete=\\"address-line1\\">
                </div>
                <div class=\\"govuk-form-group\\">
                    <label class=\\"govuk-label govuk-!-font-weight-bold\\" for=\\"addressLine2\\">Address line 2 (optional)</label>
                    <input class=\\"govuk-input\\" id=\\"addressLine2\\"
                    name=\\"addressLine2\\" type=\\"text\\" autocomplete=\\"address-line2\\">
                </div>
                <div class=\\"govuk-form-group\\">
                    <label class=\\"govuk-label govuk-!-font-weight-bold\\" for=\\"town\\">Town or city (optional)</label>
                    <input class=\\"govuk-input govuk-!-width-two-thirds\\"
                    id=\\"town\\" name=\\"town\\" type=\\"text\\" autocomplete=\\"address-level2\\">
                </div>
                <div class=\\"govuk-form-group govuk-form-group--error\\">
                    <label class=\\"govuk-label govuk-!-font-weight-bold\\" for=\\"postcode\\">Postcode</label>
                    <p id=\\"postcode-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a postcode</p>
                    <input                     class=\\"govuk-input govuk-input--width-10 govuk-input--error\\" id=\\"postcode\\"
                    name=\\"postcode\\" type=\\"text\\" aria-describedby=\\"postcode-error\\" autocomplete=\\"postal-code\\">
                </div>
                <div class=\\"govuk-form-group govuk-form-group--error\\">
                    <label class=\\"govuk-label govuk-!-font-weight-bold\\" for=\\"country\\">Country</label>
                    <p id=\\"country-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a country</p>
                    <input                     class=\\"govuk-input govuk-!-width-two-thirds govuk-input--error\\" id=\\"country\\"
                    name=\\"country\\" type=\\"text\\" aria-describedby=\\"country-error\\">
                </div>
            </fieldset>
            <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
        </form>
</main>"
`;

exports[`Representation address details page POST /applications-service/case/1/relevant-representations/address-details Field validation: should show the find page validation errors 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" data-module=\\"govuk-error-summary\\">
                <div role=\\"alert\\">
                    <h2 class=\\"govuk-error-summary__title\\"> There is a problem</h2>
                    <div class=\\"govuk-error-summary__body\\">
                        <ul class=\\"govuk-list govuk-error-summary__list\\">
                            <li><a href=\\"#address\\">Choose an address from the list</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <p class=\\"govuk-body\\"><strong>Project name:</strong> mock title</p><span class=\\"govuk-caption-l\\">Add a representation</span>
    <h1     class=\\"govuk-heading-l\\">Address details</h1>
        <form method=\\"post\\" novalidate>
            <input type=\\"hidden\\" name='stage' value=\\"find\\">
            <input type=\\"hidden\\" name='setPostcode' value=\\"\\">
            <div class=\\"govuk-!-width-one-half govuk-!-margin-bottom-4\\">
                <p class=\\"govuk-label govuk-!-margin-top-0\\">Postcode</p>
                <div class=\\"govuk-grid-row\\">
                    <div class=\\"govuk-grid-column-one-half\\">
                        <p class=\\"govuk-body\\"><strong></strong>
                        </p>
                    </div>
                    <div class=\\"govuk-grid-column-one-half\\"><a class=\\"govuk-link govuk-body govuk-!-display-inline-block\\" href=\\"?repId=1&amp;repType=represented&amp;stage=lookup\\"> Change</a>
                    </div>
                </div>
            </div>
            <fieldset class=\\"govuk-fieldset govuk-!-width-two-thirds\\">
                <legend class=\\"govuk-fieldset__legend govuk-visually-hidden\\">Select your address</legend>
                <div class=\\"govuk-form-group govuk-form-group--error\\">
                    <label class=\\"govuk-label\\" for=\\"address\\">Address</label>
                    <p id=\\"address-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Choose an address from
                        the list</p>
                    <select class=\\"govuk-select govuk-select--error\\" id=\\"address\\"
                    name=\\"address\\" aria-describedby=\\"address-error\\">
                        <option value=\\"\\" selected disabled hidden=\\"true\\">0 addresses found</option>
                    </select>
                </div>
            </fieldset>
            <div class=\\"govuk-!-margin-bottom-6\\"><a class='govuk-link govuk-body govuk-!-display-inline-block govuk-!-margin-0'
                href=\\"?repId=1&amp;repType=represented&amp;stage=enter\\"> I can't find address on the list</a>
            </div>
            <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Save and continue</button>
        </form>
</main>"
`;

exports[`Representation address details page POST /applications-service/case/1/relevant-representations/address-details Field validation: should show the lookup page validation errors 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" data-module=\\"govuk-error-summary\\">
                <div role=\\"alert\\">
                    <h2 class=\\"govuk-error-summary__title\\"> There is a problem</h2>
                    <div class=\\"govuk-error-summary__body\\">
                        <ul class=\\"govuk-list govuk-error-summary__list\\">
                            <li><a href=\\"#lookupPostcode\\">Enter a postcode</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <p class=\\"govuk-body\\"><strong>Project name:</strong> mock title</p><span class=\\"govuk-caption-l\\">Add a representation</span>
    <h1     class=\\"govuk-heading-l\\">Address details</h1>
        <form method=\\"post\\" novalidate>
            <input type=\\"hidden\\" name='stage' value=\\"lookup\\">
            <input type=\\"hidden\\" name='setPostcode' value=\\"\\">
            <fieldset class=\\"govuk-fieldset\\">
                <legend class=\\"govuk-fieldset__legend govuk-visually-hidden\\">Enter your postcode</legend>
                <div class=\\"govuk-form-group govuk-form-group--error\\">
                    <label class=\\"govuk-label\\" for=\\"lookupPostcode\\">Postcode</label>
                    <p id=\\"lookupPostcode-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Enter a postcode</p>
                    <input                     class=\\"govuk-input govuk-!-width-one-third govuk-input--error\\" id=\\"lookupPostcode\\"
                    name=\\"lookupPostcode\\" type=\\"text\\" aria-describedby=\\"lookupPostcode-error\\">
                </div>
            </fieldset>
            <div class=\\"govuk-!-margin-bottom-6\\"><a class='govuk-link govuk-body govuk-!-display-inline-block govuk-!-margin-0'
                href=\\"?repId=1&amp;repType=represented&amp;stage=enter\\"> Don't have a UK postcode?</a>
            </div>
            <button class=\\"govuk-button\\" data-module=\\"govuk-button\\">Find address</button>
        </form>
</main>"
`;
